wrap-fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ div.block {
   background-color: coral;
   margin: 8px;
   height: 100px;
-  min-width: 100px;
+  width: 100px;
+  flex-grow: 1;
 }
 .container {
   display: flex;
